feat: create planetpage component

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  min-height: 100vh;
+  // background-image:
+}
+img {
+  display: block;
+  width: 100%;
+}
