--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,18 @@
 
 body {
   min-height: 100vh;
-  // background-image:
 }
+
 img {
   display: block;
   width: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
