--- a/src/common/Planet/Planet.scss
+++ b/src/common/Planet/Planet.scss
@@ -1,11 +1,42 @@
 @use '../../styles/' as *;
 .planet {
+  text-align: center;
+  padding: rem(24);
+
+  &__options {
+    // background-color: orangered;
+    border-bottom: rem(1) solid $grey;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    text-transform: uppercase;
+    span {
+      display: none;
+    }
+  }
+
+  &__name {
+    text-transform: uppercase;
+    font-size: rem(40);
+    font-family: 'Antonio', sans-serif;
+    font-weight: 500;
+  }
+
+  &__description {
+    font-size: rem(11);
+    line-height: rem(22);
+    font-family: 'Spartan', sans-serif;
+    font-weight: normal;
+    padding-block: rem(16) rem(10);
+  }
+
+  &__illustration {
+    width: rem(111);
+    margin: 0 auto;
+  }
   &__highlights {
     display: flex;
     flex-direction: column;
-    // display: grid;
-    // grid-template-columns: repeat(4, 1fr);
-    // grid-auto-flow: column;
     gap: rem(30);
   }
 
@@ -15,6 +46,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-width: 100%;
 
     h2 {
       font-size: rem(8);
@@ -28,7 +60,6 @@
     strong {
       font-family: 'Antonio', sans-serif;
       font-size: rem(20);
-
       letter-spacing: rem(-0.75);
     }
   }
@@ -36,36 +67,52 @@
 
 @media (width >= rem(700)) {
   .planet {
+    &__name {
+      font-size: rem(48);
+    }
+
+    &__illustration {
+      width: rem(184);
+    }
     &__highlights {
       display: grid;
-      // grid-auto-flow: row;
       grid-template-columns: repeat(4, 1fr);
-
-      // display: grid;
-      // grid-template-columns: repeat(4, 1fr);
-      // gap: rem(30);
+      gap: rem(11);
     }
 
     &__card {
       flex-direction: column;
       align-items: flex-start;
-      // border: rem(1) solid $grey;
-      // padding: rem(25);
 
       h2 {
         font-size: rem(11);
         line-height: rem(25);
         letter-spacing: rem(1);
-        // text-transform: uppercase;
-        // color: $grey;
-        // font-family: 'Spartian', sans-serif;
       }
 
       strong {
-        // font-family: 'Antonio', sans-serif;
-        font-size: rem(40);
+        font-size: rem(24);
         letter-spacing: rem(-1.5);
-        // letter-spacing: rem(-1.5);
+      }
+    }
+  }
+}
+
+@media (width>=1024) {
+  .planet {
+    &__name {
+      font-size: rem(80);
+    }
+    &__illustration {
+      width: rem(290);
+    }
+
+    &__highlights {
+      gap: rem(30);
+    }
+    &__card {
+      strong {
+        font-size: rem(40);
       }
     }
   }
